--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -22,9 +22,11 @@
     </div>
   </div>
 
+  {% if unifi_sites.size == 1 and host_devices.size <= 6 %}
   <div class="title_bar">
     <img class="image" src="https://avatars.githubusercontent.com/u/3934889?s=200&v=4" />
     <span class="title label--small">Site Dashboard</span>
     <span class="instance label--small">{{ trmnl.plugin_settings.instance_name }}</span>
   </div>
 </div>
+{% endif %}
