--- a/src/full.liquid
+++ b/src/full.liquid
@@ -15,6 +15,10 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+    {% else %}
+    <div>
+      <span class="title">No sites available.</span>
+    </div>
     {% endfor %}
   </div>
 </div>
