--- a/src/full.liquid
+++ b/src/full.liquid
@@ -25,7 +25,7 @@
 
 <div class="title_bar">
   <img class="image" src="https://avatars.githubusercontent.com/u/3934889?s=200&v=4" />
-  <span class="title label--small">Site Dashboard</span>
-  <span class="instance label--small">{{ trmnl.plugin_settings.instance_name }}</span>
+  <span class="title">Site Dashboard</span>
+  <span class="instance">{{ trmnl.plugin_settings.instance_name }}</span>
 </div>
 
